update docker files for running mturk experiment

--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ POSTGRES_PASSWORD=my_postgres_password
 
 OTREE_PORT=8000
 OTREE_ADMIN_PASSWORD=my_password
-OTREE_PRODUCTION=1
+# OTREE_PRODUCTION=1
 # OTREE_AUTH_LEVEL=STUDY
