--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,7 +33,8 @@ services:
 
     # if using Docker Hub, change the line with image: to use your Docker Hub user-name/repository-name
     # if you want to build an image locally, comment it
-#    image: otree:latest
+    # image: otree:latest
+
     environment:
       DATABASE_URL: "postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@database/${POSTGRES_DATABASE}"
       OTREE_ADMIN_PASSWORD: ${OTREE_ADMIN_PASSWORD}
@@ -44,7 +45,11 @@ services:
     volumes:
       - "otree-resetdb:/opt/init"
     # Uncomment for live editing
-    #  - ./:/opt/otree
+    #   - ./:/opt/otree
+    # command:
+    #   - "otree"
+    #   - "runserver"
+    #   - "0.0.0.0:80"
     restart: always
     logging:
       options:
